crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__declarations-4.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let f = () => f();\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 18,
                    },
                },
                span: 0..18,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                            span: 4..5,
                            kind: Ident(
                                BindingIdent {
                                    name: "f",
                                    mutable: false,
                                    span: 4..5,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 5,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 17,
                                    },
                                },
                                span: 8..17,
                                kind: Lambda(
                                    Lambda {
                                        params: [],
                                        body: Expr(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 14,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 17,
                                                    },
                                                },
                                                span: 14..17,
                                                kind: App(
                                                    App {
                                                        lam: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 14,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 15,
                                                                },
                                                            },
                                                            span: 14..15,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 14,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 15,
                                                                        },
                                                                    },
                                                                    span: 14..15,
                                                                    name: "f",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        args: [],
                                                        type_args: None,
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        is_async: false,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
